--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,8 @@
         </div>
         <!--images-->
         <div class = "images">
-            <!--insert images-->
+            <img src="./images/sketch.png" alt="Sketch">
+            <img src="./images/sketch.png" alt="Sketch">
         </div>
     </body>
 </html>
