--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
                 onmouseout="this.src= 'images/linkedin-logo.png'">
             </a>
             <a href="portfolio.html">
-                <img class="logo" src="C:\Users\Melia\OneDrive\Documents\GitHub\portfolio\images\github-logo.png" alt="Github Logo"
+                <img class="logo" src="images\github-logo.png" alt="Github Logo"
                 onmouseover="this.src= 'images/github-logo-blue.png'"
                 onmouseout="this.src= 'images/github-logo.png'">
             </a>
             <a href="portfolio.html">
-                <img class="logo" src="C:\Users\Melia\OneDrive\Documents\GitHub\portfolio\images\mail.png" alt="Mail Logo"
+                <img class="logo" src="images\mail.png" alt="Mail Logo"
                 onmouseover="this.src= 'images/mail-blue.png'"
                 onmouseout="this.src= 'images/mail.png'">
             </a>
