started game page

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,17 @@
     <body>
         <!--contact logos-->
         <div class = "logoContainer">
-            <a href="portfolio.html">
+            <a href="https://www.linkedin.com/in/melia-tomlinson-67009218b/" target="_blank" rel="noopener noreferrer">
                 <img class="logo" src="images\linkedin-logo.png" alt="Linkedin Logo" 
                 onmouseover="this.src= 'images/linkedin-logo-blue.png'"
                 onmouseout="this.src= 'images/linkedin-logo.png'">
             </a>
-            <a href="portfolio.html">
+            <a href="https://github.com/meliat329" target="_blank" rel="noopener noreferrer">
                 <img class="logo" src="images\github-logo.png" alt="Github Logo"
                 onmouseover="this.src= 'images/github-logo-blue.png'"
                 onmouseout="this.src= 'images/github-logo.png'">
             </a>
-            <a href="portfolio.html">
+            <a href="mailto:meliatomlinson2022@u.northwestern.edu">
                 <img class="logo" src="images\mail.png" alt="Mail Logo"
                 onmouseover="this.src= 'images/mail-blue.png'"
                 onmouseout="this.src= 'images/mail.png'">
@@ -43,7 +43,7 @@
         <!--images-->
         <div class = "galContainer">
             <div class = "myGallery">
-                <a href="portfolio.html">
+                <a href="unityGames/unityGames.html">
                     <img src="images\unity.png" alt="Unity Games"
                     onmouseover="this.src= 'images/unity-blue.png'"
                     onmouseout="this.src= 'images/unity.png'"
