--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Melia Tomlinson</title>
-        <link rel="stylesheet" href="portfolio.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,11 +31,11 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="portfolio.html">projects</b></a></h2>
+                <h2><b><a href="index.html">projects</b></a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="portfolio.html">&nbsp about</a></h2>
+                <h2><a href="index.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="portfolio.html">&nbsp hobbies</a></h2>
+                <h2><a href="index.html">&nbsp hobbies</a></h2>
             </div>
             <h3>the future of innovative technology lies in human-centered thinking and the mindset
                  that every idea is worth pursuing further</h3>
@@ -50,7 +50,7 @@
                     data-aos="fade-up"
                     data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="index.html">
                     <img src="images\sketch.png" alt="Sketch of Raspberry Pi Theremin"
                     onmouseover="this.src= 'images/sketch.png'"
                     onmouseout="this.src= 'images/sketch.png'"
