--- a/unityGames/unityGames.html
+++ b/unityGames/unityGames.html
@@ -31,10 +31,10 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="..\portfolio.html">projects</b></a></h2>
+                <h2><b><a href="..\index.html">projects</b></a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="portfolio.html">&nbsp about</a></h2>
+                <h2><a href="..\index.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="portfolio.html">&nbsp hobbies</a></h2>
+                <h2><a href="..\index.html">&nbsp hobbies</a></h2>
             </div>
         </div>
