--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
                 data-aos-duration="700">
                 </a>
                 <a href="portfolio.html">
-                <img src="images\shl.png" alt="Student Health Leaders Logo"
+                <img src="images\shl.PNG" alt="Student Health Leaders Logo"
                 onmouseover="this.src= 'images/shl-blue.png'"
-                onmouseout="this.src= 'images/shl.png'"
+                onmouseout="this.src= 'images/shl.PNG'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
                 <a href="portfolio.html">
-                <img src="images\mask.png" alt="Drive-Thru Mask"
+                <img src="images\mask.PNG" alt="Drive-Thru Mask"
                 onmouseover="this.src= 'images/mask-blue.png'"
-                onmouseout="this.src= 'images/mask.png'"
+                onmouseout="this.src= 'images/mask.PNG'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
