platformer game testing

--- a/unityGames/unityGames.html
+++ b/unityGames/unityGames.html
@@ -39,6 +39,7 @@
             </div>
         </div>
         <a href="kittyCatch/index.html">kitty catcher</a>
+        <a href="simplePlatformer/index.html">platformer</a>
         <script src="portfolio.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
