LOTS OF STUFF WHOOPS
i forgot to commit and push for a while...

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <div class="nav">
                 <h2><b><a href="index.html">projects</b></a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="index.html">&nbsp about</a></h2>
+                <h2><a href="about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="index.html">&nbsp hobbies</a></h2>
+                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
             <h3>the future of innovative technology lies in human-centered thinking and the mindset
                  that every idea is worth pursuing further</h3>
         </div>
         <!--images-->
-        <div class = "galContainer">
+         <div class = "galContainer">
             <div class = "myGallery">
                 <a href="unityGames/unityGames.html">
                     <img src="images\unity.png" alt="Unity Games"
@@ -50,56 +50,56 @@
                     data-aos="fade-up"
                     data-aos-duration="700">
                 </a>
-                <a href="index.html">
+                <a href="theremin/theremin.html">
                     <img src="images\sketch.png" alt="Sketch of Raspberry Pi Theremin"
                     onmouseover="this.src= 'images/sketch.png'"
                     onmouseout="this.src= 'images/sketch.png'"
                     data-aos="fade-up"
                     data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="exhibit/exhibit.html">
                 <img src="images\sketch.png" alt="Sketch of Children's Coding Exhibit"
                 onmouseover="this.src= 'images/sketch.png'"
                 onmouseout="this.src= 'images/sketch.png'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
-                    <img src="images\classicalmusic.png" alt="Classical Music Listening Application"
+                <a href="legato/legato.html">
+                    <img src="images\classicalmusic.png" alt="Legato Application"
                     onmouseover="this.src= 'images/classicalmusic-blue.png'"
                     onmouseout="this.src= 'images/classicalmusic.png'"
                     data-aos="fade-up"
                     data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="leetLink/leetLink.html">
                     <img src="images\leetlink.png" alt="LeetLink Application"
                     onmouseover="this.src= 'images/leetlink-blue.png'"
                     onmouseout="this.src= 'images/leetlink.png'"
                     data-aos="fade-up"
                     data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="webGL/webGL.html">
                 <img src="images\webgl.png" alt="WebGL Shading and Lighting Project"
                 onmouseover="this.src= 'images/webgl-blue.png'"
                 onmouseout="this.src= 'images/webgl.png'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="shl/shl.html">
                 <img src="images\shl.PNG" alt="Student Health Leaders Logo"
                 onmouseover="this.src= 'images/shl-blue.png'"
                 onmouseout="this.src= 'images/shl.PNG'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="driveThru/driveThru.html">
                 <img src="images\mask.PNG" alt="Drive-Thru Mask"
                 onmouseover="this.src= 'images/mask-blue.png'"
                 onmouseout="this.src= 'images/mask.PNG'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
-                <a href="portfolio.html">
+                <a href="threeArts/threeArts.html">
                 <img src="images\threearts.jpg" alt="Three Arts Club"
                 onmouseover="this.src= 'images/threearts-blue.png'"
                 onmouseout="this.src= 'images/threearts.jpg'"
@@ -107,7 +107,7 @@
                 data-aos-duration="700">
                 </a>
             </div>
-        </div>
+        </div> 
         <script src="portfolio.js"></script>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
