--- a/threeArts/threeArts.html
+++ b/threeArts/threeArts.html
@@ -2,13 +2,12 @@
 <html lang="en">
     <head>
         <title>Melia Tomlinson</title>
-        <link rel="stylesheet" href="unityGames.css">
+        <link rel="stylesheet" href="threeArts.css">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     </head>
-
     <body>
         <!--contact logos-->
         <div class = "logoContainer">
@@ -28,57 +27,46 @@
                 onmouseout="this.src= '../images/mail.png'">
             </a>
         </div>
-
         <!--header-->
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><a href="..\index.html">projects</a></h2>
+                <h2><b><a href="../index.html">projects</b></a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="..\index.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="..\index.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
-        <!-- Project Title -->
         <div>
-            <h3>Simple Beginner Unity Games</h3>
+            <h3>Three Arts Club Video</h3>
         </div>
 
-        <!-- Project Images -->
-        <div>
-            INSERT IMAGES
+        <div class="imgContainer">
+            <a href="https://s3.amazonaws.com/uploads.knightlab.com/storymapjs/783a09de8300e1b5f74b99b99acb08ef/ancient-rome-in-chicago/index.html" target="_blank" rel="noopener noreferrer">
+                <img class="storyMap" src="../images/storyMap.png">
+            </a>
         </div>
-
         <!-- Project Short Info -->
         <div class="shortContainer">
             <div class="shortInfo">
-                <p><b>Date:</b> Fall 2021</p>
-                <p><b>Role:</b> Game Designer and Developer</p>
-                <p><b>Course:</b> Computer Game Design And Development</p>
-                <p><b>Skills:</b> Game Design, Unity, C#</p>
+                <p><b>Date:</b> Fall 2018</p>
+                <p><b>Role:</b> Video Creator</p>
+                <p><b>Course:</b> Ancient Rome in Chicago</p>
+                <p><b>Skills:</b> Historical Research, Classical Architecture, Video Filming and Editing</p>
             </div>
         </div>
+
         <div class="longContainer">
             <div class="longInfo">
-                <p>I designed and created these simple 2D Unity Games from scratch for week-long projects in Game Design and Development class. This included finding sprites, using 
-                physics simulators, and coding all of the game mechanics. </p>
-
-                <p>The first game is a simple platformer where you collect coins and avoid obstacles to get to the finish line. Players use the right and left arrow keys or A and D 
-                to move left and right, and the space bar to jump. </p>
-
-                <p>The second game is a "fruit catch" style game, but way more cute of course. The player moves the basket left and right to catch the falling kitties, but should avoid the evil dogs.
-                Catching a kittie gives the player one point, while catching a dog causes the player to lose a life. Once the player loses all three lives the game is over and the
-                score is displayed along with the option to restart. </p>
+                <p>This video project was done to be added to a larger project by Francesca Tataranni, “Ancient Rome in Chicago.” This was a virtual
+                     tour of classical architecture in Chicago. My video project on the Three Arts Club <b>received particular praise</b> by Professor Tataranni
+                      for the research done and the videography and editing skills. </p>
             </div>
         </div>
-        <!-- <a href="kittyCatch/index.html">kitty catcher</a>  NEED TO FIX (DISABLE COMPRESSION)-->
-        <!-- <a href="simplePlatformer/index.html">platformer</a> NEED TO FIX (DISABLE COMPRESSION)-->
-        <script src="portfolio.js"></script>
-        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-        <script>
-          AOS.init();
-        </script>
-    </body>
-</html>
+
+        <div class="video-container">
+            <iframe width="720" height="405" src="https://www.youtube.com/watch?v=G_DBzrsdoBA">
+            </iframe>
+        </div>
