--- a/threeArts/threeArts.html
+++ b/threeArts/threeArts.html
@@ -67,6 +67,5 @@
         </div>
 
         <div class="video-container">
-            <iframe width="720" height="405" src="https://www.youtube.com/watch?v=G_DBzrsdoBA">
-            </iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/G_DBzrsdoBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
